--- a/README
+++ b/README
@@ -1,14 +1,14 @@
-# Chicago Car Crashes Analysis
+# **Chicago Car Crashes Analysis** 
 
-## Overview
+## **Overview**
 This project aims to reduce accidents and improve road safety through in-depth analysis of the Chicago Car Crashes dataset. The goal is to identify high-risk locations and understand contributing factors, enabling more effective allocation of resources and informed decision-making for stakeholders.
 
-## Business and Data Understanding
+## **Business and Data Understanding**
 
-### Business Problem
+### **Business Problem**
 Road safety is a critical concern in Chicago, with a high number of crashes occurring due to various factors, including driver behavior, road conditions, and environmental influences. Understanding these factors is essential for implementing effective safety measures and reducing accident rates.
 
-### Objectives
+### **Objectives**
 - Provide actionable insights for informed decision-making on road safety policies and resource allocation.
 - Examine the severity of accidents and injuries.
 - Analyze time trends across different scales—hours, weeks, months, and years.
@@ -16,13 +16,13 @@ Road safety is a critical concern in Chicago, with a high number of crashes occu
 - Evaluate driver behavior and road conditions.
 - Conduct geospatial analysis of crash locations.
 
-### Key Stakeholders
+### **Key Stakeholders**
 - **City Traffic and Safety Departments**: Responsible for policy-making and road safety improvements.
 - **Emergency Responders**: Need insights into high-risk zones for better preparedness.
 - **Urban Planners**: Use crash data for designing safer road infrastructure.
 - **General Public and Drivers**: Benefit from increased awareness of high-risk areas and safer driving practices.
 
-### Data Source
+### **Data Source**
 - **Primary Source:** [Chicago Traffic Crashes Dataset](https://data.cityofchicago.org/d/aerh-rz74)
 - **Dataset Details:**
   - 48 columns, 109,094 rows.
@@ -31,7 +31,7 @@ Road safety is a critical concern in Chicago, with a high number of crashes occu
   - High percentage of missing values in some columns.
   - Large dataset making some models (e.g., KNN) computationally expensive.
 
-## Methodology
+## **Methodology**
 1. **Data Collection:**
    - Data stored in CSV format for structured querying.
 2. **Data Cleaning & Preprocessing:**
@@ -43,9 +43,9 @@ Road safety is a critical concern in Chicago, with a high number of crashes occu
 5. **Implementation:**
    - Workflow executed using Jupyter Notebook and Tableau worksheets for interactive data exploration and visualization.
 
-## Evaluation
+## **Evaluation**
 
-### Key Insights
+### **Key Insights**
 - **Class Distribution of Injury Severity:**
   - 86.5% of cases had no injuries, while only 0.14% were fatal.
   - The dataset is highly imbalanced, making rare fatal accidents harder to detect.
@@ -67,7 +67,7 @@ Road safety is a critical concern in Chicago, with a high number of crashes occu
   - Most crashes occur on dry roads due to high traffic.
   - Top crash-prone streets include major roads like Western Avenue.
 
-### Model Performance
+### **Model Performance**
 - **Class Imbalance Issue:**
   - Without resampling, models struggled to detect injury-related crashes.
   - SMOTE (Synthetic Minority Over-sampling Technique) improved recall for minority injury cases.
@@ -85,7 +85,7 @@ Road safety is a critical concern in Chicago, with a high number of crashes occu
   - `Injuries_total` and `Damage` were the strongest predictors.
   - Road conditions and weather had moderate influence, while driver behavior factors played a key role in crash outcomes.
 
-## Conclusion & Recommendations
+## **Conclusion & Recommendations**
 - Implement better road safety policies targeting high-risk areas.
 - Improve traffic control measures during peak hours and high-risk days.
 - Enhance driver education programs on common crash causes.
